mid box section

--- a/index.html
+++ b/index.html
@@ -92,8 +92,33 @@
           </div>
         </div>
       </section>
+      <section class="mid">
+          <div class="container">
+               <div class="mid-box">
+                    <div class="first">
+                         <button class="des"><span>Description</span></button>
+                         <button class="addi"> <span>Additional Information</span></button>
+                         <button class="rev">Review</button>
+                    </div>
+                    <div class="box">
+                         <h5>Technical Specs</h5>
+                         <li>Sound :<span>Audio</span></li>
+                         <li>Batters :<span>Mega 02</span></li>
+                         <li>Max Bass :<span>10 Levels</span></li>
+                         <li>Inputs :<span>3.5 minijack</span></li>
+                    </div>
+                    <div class="box">
+                         <h5> General</h5>
+                         <li>Weight:<span>0.2kg</span></li>
+                         <li>Dimensions :<span> 4 x 1.4 x 2 cm</span></li>
+                         <li>Size :<span>one Size Fits All</span></li>
+                         <li>Color :<span>Yellow</span></li>
+                         <li>Generate :<span>Life time</span></li>
+                    </div>
+               </div>
+          </div>
+      </section>
     </main>
-
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/a10194993b.js" crossorigin="anonymous"></script>
   </body>
