related card added

--- a/index.html
+++ b/index.html
@@ -92,31 +92,111 @@
           </div>
         </div>
       </section>
-      <section class="mid">
-          <div class="container">
-               <div class="mid-box">
-                    <div class="first">
-                         <button class="des"><span>Description</span></button>
-                         <button class="addi"> <span>Additional Information</span></button>
-                         <button class="rev">Review</button>
-                    </div>
-                    <div class="box">
-                         <h5>Technical Specs</h5>
-                         <li>Sound :<span>Audio</span></li>
-                         <li>Batters :<span>Mega 02</span></li>
-                         <li>Max Bass :<span>10 Levels</span></li>
-                         <li>Inputs :<span>3.5 minijack</span></li>
-                    </div>
-                    <div class="box">
-                         <h5> General</h5>
-                         <li>Weight:<span>0.2kg</span></li>
-                         <li>Dimensions :<span> 4 x 1.4 x 2 cm</span></li>
-                         <li>Size :<span>one Size Fits All</span></li>
-                         <li>Color :<span>Yellow</span></li>
-                         <li>Generate :<span>Life time</span></li>
-                    </div>
-               </div>
+      <div class="mid">
+        <div class="container">
+          <div class="mid-box">
+            <div class="first">
+              <button class="des"><span>Description</span></button>
+              <button class="addi"><span>Additional Information</span></button>
+              <button class="rev">Review</button>
+            </div>
+            <div class="box">
+              <h5>Technical Specs</h5>
+              <li>Sound :<span>Audio</span></li>
+              <li>Batters :<span>Mega 02</span></li>
+              <li>Max Bass :<span>10 Levels</span></li>
+              <li>Inputs :<span>3.5 minijack</span></li>
+            </div>
+            <div class="box">
+              <h5>General</h5>
+              <li>Weight:<span>0.2kg</span></li>
+              <li>Dimensions :<span> 4 x 1.4 x 2 cm</span></li>
+              <li>Size :<span>one Size Fits All</span></li>
+              <li>Color :<span>Yellow</span></li>
+              <li>Generate :<span>Life time</span></li>
+            </div>
           </div>
+        </div>
+      </div>
+
+      <section class="related">
+        <div class="container">
+          <h3 class="related-heading">Related Products</h3>
+          <div class="row">
+            <div class="col-3">
+               <div class="boxs">
+                    <ul class="card-box">
+                         <div class="d-img">
+                              <img src="img/Machine-2.jpg" alt="car">
+                         </div>
+                         <li class="icon">
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                         </li>
+                         <li class="name">Construction Machine</li>
+                         <li class="price"> <del>$200.00</del> <span>$200.00</span></li>
+                    </ul>
+               </div>
+            </div>
+            <div class="col-3">
+               <div class="boxs">
+                    <ul class="card-box">
+                         <div class="d-img">
+                              <img src="img/drling.png" alt="dril">
+                         </div>
+                         <li class="icon">
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                         </li>
+                         <li class="name">Construction Machine</li>
+                         <li class="price"> <del>$200.00</del> <span>$200.00</span></li>
+                    </ul>
+               </div>
+            </div>
+            <div class="col-3">
+               <div class="boxs">
+                    <ul class="card-box">
+                         <div class="d-img">
+                              <img src="img/plus.png" alt="plus">
+                         </div>
+                         <li class="icon">
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                         </li>
+                         <li class="name">Construction Machine</li>
+                         <li class="price"> <del>$200.00</del> <span>$200.00</span></li>
+                    </ul>
+               </div>
+            </div>
+            <div class="col-3">
+               <div class="boxs">
+                    <ul class="card-box">
+                         <div class="d-img">
+                              <img src="img/Cutting-Pliers.png" alt="cuing-plus">
+                         </div>
+                         <li class="icon">
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                              <i class="fa-solid fa-star"></i>
+                         </li>
+                         <li class="name">Construction Machine</li>
+                         <li class="price"> <del>$200.00</del> <span>$200.00</span></li>
+                    </ul>
+               </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <script src="js/bootstrap.bundle.min.js"></script>
