some hover effect to button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="quantity">
                   <h4>Quantity</h4>
                   <div class="btN">
-                    <button class="add-cart"><span>Add To Cart</span></button>
+                    <button class="add-cart"><i class="fa-solid fa-cart-plus"></i><span>Add To Cart</span></button>
                     <button class="count">+<span>01</span>-</button>
                   </div>
                 </div>
@@ -102,18 +102,18 @@
             </div>
             <div class="box">
               <h5>Technical Specs</h5>
-              <li>Sound :<span>Audio</span></li>
-              <li>Batters :<span>Mega 02</span></li>
-              <li>Max Bass :<span>10 Levels</span></li>
-              <li>Inputs :<span>3.5 minijack</span></li>
+              <li>Sound : <span>Audio</span></li>
+              <li>Batters : <span>Mega 02</span></li>
+              <li>Max Bass : <span>10 Levels</span></li>
+              <li>Inputs : <span>3.5 minijack</span></li>
             </div>
             <div class="box">
               <h5>General</h5>
-              <li>Weight:<span>0.2kg</span></li>
+              <li>Weight: <span> 0.2kg</span></li>
               <li>Dimensions :<span> 4 x 1.4 x 2 cm</span></li>
-              <li>Size :<span>one Size Fits All</span></li>
-              <li>Color :<span>Yellow</span></li>
-              <li>Generate :<span>Life time</span></li>
+              <li>Size :<span> one Size Fits All</span></li>
+              <li>Color : <span> Yellow</span></li>
+              <li>Generate : <span>Life time</span></li>
             </div>
           </div>
         </div>
@@ -129,6 +129,7 @@
                          <div class="d-img">
                               <img src="img/Machine-2.jpg" alt="car">
                          </div>
+                         <div class="overlay"></div>
                          <li class="icon">
                               <i class="fa-solid fa-star"></i>
                               <i class="fa-solid fa-star"></i>
